[workspace]
members = [
  "kdef-pgtable",
  "pie-boot",
  "tests/test-some-rt",
  "loader/*",
  "pie-boot-if",
]
resolver = "3"

[workspace.package]
authors = ["周睿 <zrufo747@outlook.com>"]
categories = ["embedded", "no-std"]
description = "Boot kernel code with mmu."
edition = "2024"
keywords = ["os"]
license = "MIT"
repository = "https://github.com/rcore-os/pie-boot"
version = "0.1.0"

[workspace.dependencies]
kdef-pgtable = {path = "kdef-pgtable", version = "0.1"}
pie-boot-if = {path = "pie-boot-if", version = "0.1.1"}
pie-boot-loader-macros = {path = "loader/pie-boot-loader-macros", version = "0.1"}
