[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "pie-boot"
repository.workspace = true
version = "0.2.0"

[features]
hv = []

[dependencies]
fdt-parser = {version = "0.4"}
heapless = "0.8"
spin = "0.10"
kdef-pgtable = {workspace = true}
pie-boot-if = {workspace = true}
pie-boot-macros = {workspace = true}

[target.'cfg(target_arch = "aarch64")'.dependencies]
kasm-aarch64 = {workspace = true}
pie-boot-loader-aarch64 = {path = "../loader/pie-boot-loader-aarch64", version = "0.1.12" }

[build-dependencies]
bindeps-simple = {version = "0.2"}
kdef-pgtable = {workspace = true}
