[package]
name = "pie-boot-arm-loader"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["console"]
el2 = []
console = ["dep:any-uart"]


[dependencies]
fdt-parser = { version = "0.4" }
any-uart = { version = "0.2", optional = true }
aarch64-cpu = "10.0"
log = "0.4"
page-table-generic = "0.6"
num-align = "0.1"
bitflags = "2.9"
pie-boot-loader-macros = { workspace = true, version = "0.1" }
thiserror = { version = "2", default-features = false }
pie-boot-if = { workspace = true }

[build-dependencies]
prettyplease = "0.2"
quote = "1.0"
syn = "2.0"
