[package]
name = "test-some-rt"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pie-boot = { path = "../../pie-boot", version = "0.1" }
log = "0.4"
any-uart = { version = "0.2" }

[[test]]
name = "test"
harness = false
